--- a/backend/package.json
+++ b/backend/package.json
@@ -8,14 +8,20 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "@google-cloud/aiplatform": "^5.0.0",
+    "@google-cloud/vertexai": "^1.10.0",
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+    "nodemon": "^3.1.10"
+  },
+  "description": "1. **Install dependencies:**\r    ```sh\r    npm install\r    ```\r 2. **Configure environment variables:**\r    - Copy `.env` and fill in your API keys for OpenRouter, Replicate, and Infermedica.\r 3. **Run the server (development):**\r    ```sh\r    npm run dev\r    ```\r 4. **Run the server (production):**\r    ```sh\r    npm start\r    ```",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
