--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@google-cloud/aiplatform": "^5.1.0",
     "@google-cloud/vertexai": "^1.10.0",
+    "@gradio/client": "^1.16.0",
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
