--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
+    "@gradio/client": "^1.17.0",
     "nodemon": "^3.1.10"
   },
   "description": "1. **Install dependencies:**\r    ```sh\r    npm install\r    ```\r 2. **Configure environment variables:**\r    - Copy `.env` and fill in your API keys for OpenRouter, Replicate, and Infermedica.\r 3. **Run the server (development):**\r    ```sh\r    npm run dev\r    ```\r 4. **Run the server (production):**\r    ```sh\r    npm start\r    ```",
